<resources>
    <string name="app_name">MedicaTask</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="medica">Medica</string>
    <string name="required">Required</string>
    <string name="specialties">Specialties</string>
    <string name="branches">Branches</string>
    <string name="doctors">Doctors</string>
    <string name="branches_on_map">Branches on map</string>
    <string name="price">Price : </string>
    <string name="from">From </string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="choose_date">please choose date</string>
    <string name="choose_time">please choose time</string>
    <string name="confirm_reservation">Confirm Reservation</string>
</resources>