<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/snow"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_doctor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/white"
        android:background="@color/primary_blue"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/cairo_bold"
        tools:text="Magdy Mahmoud"
        />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
       app:layout_constraintBottom_toTopOf="@+id/btn_reservation"
        app:layout_constraintTop_toBottomOf="@+id/text_doctor_name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/cairo_semibold"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/price"
                app:layout_constraintStart_toEndOf="@+id/price"
                app:layout_constraintTop_toTopOf="@+id/price"
                tools:text="29837" />

            <TextView
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/from"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price" />

            <TextView
                android:id="@+id/text_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_semibold"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/from"
                app:layout_constraintStart_toEndOf="@+id/price"
                app:layout_constraintTop_toTopOf="@+id/from"
                tools:text="29837" />

            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7sdp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/to"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="@+id/text_from"
                app:layout_constraintStart_toEndOf="@+id/text_from"
                app:layout_constraintTop_toTopOf="@+id/text_from"

                />

            <TextView
                android:id="@+id/text_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7sdp"
                android:fontFamily="@font/cairo_semibold"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/to"
                app:layout_constraintStart_toEndOf="@+id/to"
                app:layout_constraintTop_toTopOf="@+id/to"
                tools:text="29837" />

            <TextView
                android:id="@+id/Date_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="@font/cairo_bold"
                android:gravity="center"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toBottomOf="@id/from" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/Date_header" />


            <TextView
                android:id="@+id/time_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="@font/cairo_bold"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@id/recycler_date" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/time_header"
                app:spanCount="3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <TextView
        android:id="@+id/btn_reservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/confirm_reservation"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/button_shap"
       app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>