<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ui.login.LoginFragment"
    >


<TextView
    android:id="@+id/image_header"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:scaleType="centerCrop"
    android:background="@color/primary_blue"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHeight_percent="0.40"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:fontFamily="@font/cairo_semibold"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/image_header"
        app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/text_hint"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="@dimen/_13ssp"
    android:text="@string/medica"
    android:textColor="@color/white"
    android:textStyle="italic"
    android:layout_marginEnd="@dimen/_35sdp"
    app:layout_constraintBottom_toBottomOf="@id/text_welcome"
    app:layout_constraintTop_toBottomOf="@id/text_welcome"
    app:layout_constraintEnd_toEndOf="@+id/image_header"
    app:layout_constraintStart_toStartOf="@+id/text_welcome" />

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:background="@drawable/background_auth"
    android:layout_marginTop="@dimen/_75sdp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/text_hint">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout1"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_blue"
        android:hint="@string/password"
        app:boxStrokeColor="@color/primary_blue"

        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="19dp">

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_semibold"
            android:inputType="textPassword"
            android:maxLines="1"
            android:text="123456"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout2"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_blue"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        android:hint="@string/phone_number"
        app:boxStrokeColor="@color/primary_blue"
        app:layout_constraintBottom_toTopOf="@+id/text_input_layout1"
        >

        <EditText
            android:id="@+id/phone_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_semibold"
            android:inputType="phone"
            android:maxLines="1"
            android:text="01156161776"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/btn_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/cairo_semibold"
        android:gravity="end"
        android:visibility="invisible"
        android:textSize="@dimen/_12ssp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout1" />

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/button_shap"
        app:layout_constraintTop_toBottomOf="@+id/btn_forget_password"
        />

</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>